...
        }
        
        view?.setProfileDetails(name: profile.name, loginName: profile.loginName, bio: profile.bio)
    }
        
    func didTapLogoutButton() {
        let alert = UIAlertController(title: "Пока, пока!",
                                      message: "Уверены, что хотите выйти?",
                                      preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "Да", style: .default, handler: { _ in
            ProfileLogoutService.shared.logout()
        }))
        alert.addAction(UIAlertAction(title: "Нет", style: .default))
        
        view?.presentAlert(alert)
    }
...
